Tweaks to model

--- a/sentiment-analysis.ipynb
+++ b/sentiment-analysis.ipynb
@@ -314,7 +314,7 @@
    ],
    "source": [
     "print('\\nTraining word2vec...')\n",
-    "word_model = gensim.models.Word2Vec(features, size=100, min_count=1, window=3, iter=100)\n",
+    "word_model = gensim.models.Word2Vec(features, size=300, min_count=1, window=3, iter=100)\n",
     "pretrained_weights = word_model.wv.syn0\n",
     "vocab_size, emdedding_size = pretrained_weights.shape\n",
     "print('Word embedding shape:', pretrained_weights.shape)"
@@ -395,14 +395,15 @@
     "from keras.callbacks import ModelCheckpoint, EarlyStopping\n",
     "from keras.models import load_model\n",
     "\n",
-    "batch_size = 128\n",
+    "MAX_LEN = 100\n",
+    "batch_size = 32\n",
     "print(\"Padding the data for LSTM...\")\n",
     "print(\"Padding train data...\")\n",
-    "x_train = sequence.pad_sequences(train_features, maxlen=emdedding_size)\n",
+    "x_train = sequence.pad_sequences(train_features, maxlen=MAX_LEN)\n",
     "print(\"Padding val data...\")\n",
-    "x_val = sequence.pad_sequences(val_features, maxlen=emdedding_size)\n",
+    "x_val = sequence.pad_sequences(val_features, maxlen=MAX_LEN)\n",
     "print(\"Padding test data...\")\n",
-    "x_test = sequence.pad_sequences(test_features, maxlen=emdedding_size)"
+    "x_test = sequence.pad_sequences(test_features, maxlen=MAX_LEN)"
    ]
   },
   {
@@ -413,34 +414,44 @@
    "source": [
     "droprate = 0.7\n",
     "\n",
-    "print('\\nTraining LSTM...')\n",
-    "model = Sequential()\n",
-    "model.add(Embedding(input_dim=vocab_size, output_dim=emdedding_size, weights=[pretrained_weights]))\n",
-    "model.add(Bidirectional(LSTM(units=emdedding_size, dropout=droprate, recurrent_dropout=droprate)))\n",
-    "model.add(BatchNormalization())\n",
-    "model.add(Dropout(droprate))\n",
+    "try:\n",
+    "    model = load_model(MODEL_NAME)\n",
+    "    print(\"Loaded saved model: \" + MODEL_NAME)\n",
+    "except:\n",
+    "    print(\"Creating new model: \" + MODEL_NAME)\n",
+    "    model = None\n",
     "\n",
-    "model.add(Dense(units=256, activation='elu'))\n",
-    "model.add(BatchNormalization())\n",
-    "model.add(Dropout(droprate))\n",
+    "if model is None:\n",
+    "    model = Sequential()\n",
+    "    model.add(Embedding(input_dim=vocab_size, output_dim=emdedding_size, weights=[pretrained_weights]))\n",
+    "    model.add(Bidirectional(LSTM(units=emdedding_size, dropout=droprate, recurrent_dropout=droprate)))\n",
+    "    model.add(BatchNormalization())\n",
+    "    model.add(Dropout(droprate))\n",
     "\n",
-    "model.add(Dense(units=32, activation='elu'))\n",
-    "model.add(BatchNormalization())\n",
-    "model.add(Dropout(droprate))\n",
+    "    model.add(Dense(units=256, activation='elu'))\n",
+    "    model.add(BatchNormalization())\n",
+    "    model.add(Dropout(droprate))\n",
     "\n",
-    "model.add(Dense(units=1, activation='sigmoid'))\n",
+    "    model.add(Dense(units=32, activation='elu'))\n",
+    "    model.add(BatchNormalization())\n",
+    "    model.add(Dropout(droprate))\n",
     "\n",
-    "model.compile(loss='mean_squared_error',\n",
-    "              optimizer='adam',\n",
-    "              metrics=['accuracy'])\n",
+    "    model.add(Dense(units=1, activation='sigmoid'))\n",
     "\n",
-    "model.fit(x_train, y_train,\n",
-    "          batch_size=batch_size,\n",
-    "          epochs=25,\n",
-    "          verbose=0,\n",
-    "          validation_data=[x_val, y_val],\n",
-    "          callbacks = [ModelCheckpoint(MODEL_NAME, monitor='val_acc', verbose=1, save_best_only=True, save_weights_only=False, mode='max', period=1)])\n",
+    "    model.compile(loss='mean_squared_error',\n",
+    "                  optimizer='adam',\n",
+    "                  metrics=['accuracy'])\n",
     "\n",
+    "if TRAIN_MODEL:\n",
+    "    print('\\nTraining LSTM model...')\n",
+    "    model.fit(x_train, y_train,\n",
+    "              batch_size=batch_size,\n",
+    "              epochs=25,\n",
+    "              verbose=0,\n",
+    "              validation_data=[x_val, y_val],\n",
+    "              callbacks = [ModelCheckpoint(MODEL_NAME, monitor='val_acc', verbose=1, save_best_only=True, save_weights_only=False, mode='max', period=1)])\n",
+    "    \n",
+    "print('\\Validation LSTM model...')\n",
     "saved_model = load_model(MODEL_NAME)\n",
     "score = saved_model.evaluate(x_test, y_test, verbose=0)\n",
     "print('Test loss:', score[0])\n",
