--- a/sentiment-analysis.ipynb
+++ b/sentiment-analysis.ipynb
@@ -425,6 +425,8 @@
     "    model = Sequential()\n",
     "    model.add(Embedding(input_dim=vocab_size, output_dim=emdedding_size, weights=[pretrained_weights]))\n",
     "    model.add(Bidirectional(LSTM(units=emdedding_size, dropout=droprate, recurrent_dropout=droprate)))\n",
+    "    \n",
+    "    '''\n",
     "    model.add(BatchNormalization())\n",
     "    model.add(Dropout(droprate))\n",
     "\n",
@@ -435,6 +437,7 @@
     "    model.add(Dense(units=32, activation='elu'))\n",
     "    model.add(BatchNormalization())\n",
     "    model.add(Dropout(droprate))\n",
+    "    '''\n",
     "\n",
     "    model.add(Dense(units=1, activation='sigmoid'))\n",
     "\n",
@@ -449,7 +452,7 @@
     "              epochs=25,\n",
     "              verbose=0,\n",
     "              validation_data=[x_val, y_val],\n",
-    "              callbacks = [ModelCheckpoint(MODEL_NAME, monitor='val_acc', verbose=1, save_best_only=True, save_weights_only=False, mode='max', period=1)])\n",
+    "              callbacks = [ModelCheckpoint(MODEL_NAME, monitor='val_loss', verbose=1, save_best_only=True, save_weights_only=False, mode='min', period=1)])\n",
     "    \n",
     "print('\\Validation LSTM model...')\n",
     "saved_model = load_model(MODEL_NAME)\n",
