Added lambda callbacks

--- a/sentiment-analysis.ipynb
+++ b/sentiment-analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
        "4          2  "
       ]
      },
-     "execution_count": 88,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
        "4    156065        8545         intermittently pleasing but mostly routine"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
      "text": [
       "\n",
       "Training word2vec...\n",
-      "Word embedding shape: (17631, 100)\n"
+      "Word embedding shape: (17631, 300)\n"
      ]
     }
    ],
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,9 +372,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -392,7 +399,7 @@
     "from keras.layers import Dense, Dropout, Embedding, LSTM, Bidirectional, BatchNormalization\n",
     "from keras.datasets import imdb\n",
     "from keras.utils import to_categorical\n",
-    "from keras.callbacks import ModelCheckpoint, EarlyStopping\n",
+    "from keras.callbacks import ModelCheckpoint, EarlyStopping, LambdaCallback\n",
     "from keras.models import load_model\n",
     "\n",
     "MAX_LEN = 100\n",
@@ -404,6 +411,18 @@
     "x_val = sequence.pad_sequences(val_features, maxlen=MAX_LEN)\n",
     "print(\"Padding test data...\")\n",
     "x_test = sequence.pad_sequences(test_features, maxlen=MAX_LEN)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#x_train = x_train[0:10,]\n",
+    "#y_train = y_train[0:10,]\n",
+    "#x_val = x_val[0:10,]\n",
+    "#y_val = y_val[0:10,]"
    ]
   },
   {
@@ -426,6 +445,7 @@
     "    model.add(Embedding(input_dim=vocab_size, output_dim=emdedding_size, weights=[pretrained_weights]))\n",
     "    model.add(Bidirectional(LSTM(units=emdedding_size, dropout=droprate, recurrent_dropout=droprate)))\n",
     "    \n",
+    "\n",
     "    '''\n",
     "    model.add(BatchNormalization())\n",
     "    model.add(Dropout(droprate))\n",
@@ -444,6 +464,16 @@
     "    model.compile(loss='mean_squared_error',\n",
     "                  optimizer='adam',\n",
     "                  metrics=['accuracy'])\n",
+    "    \n",
+    "def do_on_epoch_end(epoch, _):\n",
+    "    \n",
+    "    pred = model.predict(x_val)\n",
+    "    actual = y_val.copy()\n",
+    "    pred = np.round(pred * 4.0).flatten()\n",
+    "    actual = np.round(actual * 4.0).flatten()\n",
+    "    acc = sum(pred == actual)/ len(actual)\n",
+    "    print(\"Accuracy obtained after epoch: \" + str(acc * 100))\n",
+    "    \n",
     "\n",
     "if TRAIN_MODEL:\n",
     "    print('\\nTraining LSTM model...')\n",
@@ -452,9 +482,11 @@
     "              epochs=25,\n",
     "              verbose=0,\n",
     "              validation_data=[x_val, y_val],\n",
-    "              callbacks = [ModelCheckpoint(MODEL_NAME, monitor='val_loss', verbose=1, save_best_only=True, save_weights_only=False, mode='min', period=1)])\n",
+    "              callbacks = [ModelCheckpoint(MODEL_NAME, monitor='val_loss', verbose=1, save_best_only=True, save_weights_only=False, mode='min', period=1),\n",
+    "                          LambdaCallback(on_epoch_end=do_on_epoch_end)]\n",
+    "             )\n",
     "    \n",
-    "print('\\Validation LSTM model...')\n",
+    "print('\\nValidation LSTM model...')\n",
     "saved_model = load_model(MODEL_NAME)\n",
     "score = saved_model.evaluate(x_test, y_test, verbose=0)\n",
     "print('Test loss:', score[0])\n",
