Tweaks to lambda callbacks

--- a/sentiment-analysis.ipynb
+++ b/sentiment-analysis.ipynb
@@ -427,9 +427,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded saved model: trained_model_lstm.hdf5\n",
+      "\n",
+      "Training LSTM model...\n",
+      "\n",
+      "Epoch 00001: val_loss improved from inf to 0.02835, saving model to trained_model_lstm.hdf5\n",
+      "Accuracy obtained after epoch: 5 / 10\n",
+      "\n",
+      "Epoch 00002: val_loss did not improve\n",
+      "\n",
+      "Epoch 00003: val_loss did not improve\n",
+      "Accuracy obtained after epoch: 4 / 10\n",
+      "\n",
+      "Epoch 00004: val_loss did not improve\n",
+      "\n",
+      "Epoch 00005: val_loss did not improve\n",
+      "Accuracy obtained after epoch: 4 / 10\n",
+      "\n",
+      "Epoch 00006: val_loss did not improve\n",
+      "\n",
+      "Epoch 00007: val_loss did not improve\n",
+      "Accuracy obtained after epoch: 4 / 10\n",
+      "\n",
+      "Epoch 00008: val_loss did not improve\n",
+      "\n",
+      "Epoch 00009: val_loss did not improve\n",
+      "Accuracy obtained after epoch: 4 / 10\n",
+      "\n",
+      "Epoch 00010: val_loss did not improve\n",
+      "\n",
+      "Validation LSTM model...\n",
+      "Test loss: 0.028350453823804855\n",
+      "Test accuracy: 0.0\n"
+     ]
+    }
+   ],
    "source": [
     "droprate = 0.7\n",
     "\n",
@@ -445,7 +484,6 @@
     "    model.add(Embedding(input_dim=vocab_size, output_dim=emdedding_size, weights=[pretrained_weights]))\n",
     "    model.add(Bidirectional(LSTM(units=emdedding_size, dropout=droprate, recurrent_dropout=droprate)))\n",
     "    \n",
-    "\n",
     "    '''\n",
     "    model.add(BatchNormalization())\n",
     "    model.add(Dropout(droprate))\n",
@@ -466,20 +504,20 @@
     "                  metrics=['accuracy'])\n",
     "    \n",
     "def do_on_epoch_end(epoch, _):\n",
-    "    \n",
-    "    pred = model.predict(x_val)\n",
-    "    actual = y_val.copy()\n",
-    "    pred = np.round(pred * 4.0).flatten()\n",
-    "    actual = np.round(actual * 4.0).flatten()\n",
-    "    acc = sum(pred == actual)/ len(actual)\n",
-    "    print(\"Accuracy obtained after epoch: \" + str(acc * 100))\n",
+    "    if(epoch % 2 == 0):\n",
+    "        pred = model.predict(x_val)\n",
+    "        actual = y_val.copy()\n",
+    "        pred = np.round(pred * 4.0).flatten()\n",
+    "        actual = np.round(actual * 4.0).flatten()\n",
+    "        acc = sum(pred == actual)\n",
+    "        print(\"Accuracy obtained after epoch: \" + str(acc) + \" / \" + str(len(actual)))\n",
     "    \n",
     "\n",
     "if TRAIN_MODEL:\n",
     "    print('\\nTraining LSTM model...')\n",
     "    model.fit(x_train, y_train,\n",
     "              batch_size=batch_size,\n",
-    "              epochs=25,\n",
+    "              epochs=10,\n",
     "              verbose=0,\n",
     "              validation_data=[x_val, y_val],\n",
     "              callbacks = [ModelCheckpoint(MODEL_NAME, monitor='val_loss', verbose=1, save_best_only=True, save_weights_only=False, mode='min', period=1),\n",
@@ -488,10 +526,17 @@
     "    \n",
     "print('\\nValidation LSTM model...')\n",
     "saved_model = load_model(MODEL_NAME)\n",
-    "score = saved_model.evaluate(x_test, y_test, verbose=0)\n",
+    "score = saved_model.evaluate(x_val, y_val, verbose=0)\n",
     "print('Test loss:', score[0])\n",
     "print('Test accuracy:', score[1])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
