Tweaks to the model

--- a/sentiment-analysis.ipynb
+++ b/sentiment-analysis.ipynb
@@ -24,6 +24,7 @@
     "TRAIN_MODEL = True\n",
     "MODEL_NAME = \"trained_model_lstm.hdf5\"\n",
     "FILLER_WORD = \"unk\"\n",
+    "EMBEDDING_SIZE = 300\n",
     "\n",
     "def load_data(file, direc=\"\", sep=\"\\t\", header=True):\n",
     "    csv_path = os.path.join(direc, file)\n",
@@ -308,13 +309,13 @@
      "text": [
       "\n",
       "Training word2vec...\n",
-      "Word embedding shape: (17631, 300)\n"
+      "Word embedding shape: (17631, 100)\n"
      ]
     }
    ],
    "source": [
     "print('\\nTraining word2vec...')\n",
-    "word_model = gensim.models.Word2Vec(features, size=300, min_count=1, window=3, iter=100)\n",
+    "word_model = gensim.models.Word2Vec(features, size=EMBEDDING_SIZE, min_count=1, window=3, iter=100)\n",
     "pretrained_weights = word_model.wv.syn0\n",
     "vocab_size, emdedding_size = pretrained_weights.shape\n",
     "print('Word embedding shape:', pretrained_weights.shape)"
@@ -361,18 +362,40 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LabelBinarizer(neg_label=0, pos_label=1, sparse_output=False)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "y_train = train_data[\"Sentiment\"].values\n",
-    "y_train = np.divide(y_train, 4.0)\n",
-    "\n",
-    "y_val = val_data[\"Sentiment\"].values\n",
-    "y_val = np.divide(y_val, 4.0)"
+    "from sklearn.preprocessing import LabelBinarizer\n",
+    "binarizer = LabelBinarizer()\n",
+    "binarizer.fit([x for x in range(5)])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_train = train_data[\"Sentiment\"].values\n",
+    "y_train = binarizer.transform(y_train)\n",
+    "\n",
+    "y_val = val_data[\"Sentiment\"].values\n",
+    "y_val = binarizer.transform(y_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +425,7 @@
     "from keras.callbacks import ModelCheckpoint, EarlyStopping, LambdaCallback\n",
     "from keras.models import load_model\n",
     "\n",
-    "MAX_LEN = 100\n",
+    "MAX_LEN = np.int(EMBEDDING_SIZE / 2)\n",
     "batch_size = 32\n",
     "print(\"Padding the data for LSTM...\")\n",
     "print(\"Padding train data...\")\n",
@@ -415,19 +438,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#x_train = x_train[0:10,]\n",
-    "#y_train = y_train[0:10,]\n",
-    "#x_val = x_val[0:10,]\n",
-    "#y_val = y_val[0:10,]"
+    "#x_train = x_train[0:1000,]\n",
+    "#y_train = y_train[0:1000,]\n",
+    "#x_val = x_val[0:1000,]\n",
+    "#y_val = y_val[0:1000,]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -438,34 +461,29 @@
       "\n",
       "Training LSTM model...\n",
       "\n",
-      "Epoch 00001: val_loss improved from inf to 0.02835, saving model to trained_model_lstm.hdf5\n",
-      "Accuracy obtained after epoch: 5 / 10\n",
+      "Epoch 00001: val_acc improved from -inf to 0.51200, saving model to trained_model_lstm.hdf5\n",
       "\n",
-      "Epoch 00002: val_loss did not improve\n",
+      "Epoch 00002: val_acc did not improve\n",
       "\n",
-      "Epoch 00003: val_loss did not improve\n",
-      "Accuracy obtained after epoch: 4 / 10\n",
+      "Epoch 00003: val_acc did not improve\n",
       "\n",
-      "Epoch 00004: val_loss did not improve\n",
+      "Epoch 00004: val_acc improved from 0.51200 to 0.51300, saving model to trained_model_lstm.hdf5\n",
       "\n",
-      "Epoch 00005: val_loss did not improve\n",
-      "Accuracy obtained after epoch: 4 / 10\n",
+      "Epoch 00005: val_acc improved from 0.51300 to 0.51400, saving model to trained_model_lstm.hdf5\n",
       "\n",
-      "Epoch 00006: val_loss did not improve\n",
+      "Epoch 00006: val_acc did not improve\n",
       "\n",
-      "Epoch 00007: val_loss did not improve\n",
-      "Accuracy obtained after epoch: 4 / 10\n",
+      "Epoch 00007: val_acc improved from 0.51400 to 0.51500, saving model to trained_model_lstm.hdf5\n",
       "\n",
-      "Epoch 00008: val_loss did not improve\n",
+      "Epoch 00008: val_acc did not improve\n",
       "\n",
-      "Epoch 00009: val_loss did not improve\n",
-      "Accuracy obtained after epoch: 4 / 10\n",
+      "Epoch 00009: val_acc did not improve\n",
       "\n",
-      "Epoch 00010: val_loss did not improve\n",
+      "Epoch 00010: val_acc did not improve\n",
       "\n",
       "Validation LSTM model...\n",
-      "Test loss: 0.028350453823804855\n",
-      "Test accuracy: 0.0\n"
+      "Test loss: 1.2717999334335328\n",
+      "Test accuracy: 0.515\n"
      ]
     }
    ],
@@ -482,35 +500,24 @@
     "if model is None:\n",
     "    model = Sequential()\n",
     "    model.add(Embedding(input_dim=vocab_size, output_dim=emdedding_size, weights=[pretrained_weights]))\n",
-    "    model.add(Bidirectional(LSTM(units=emdedding_size, dropout=droprate, recurrent_dropout=droprate)))\n",
+    "    model.add(Bidirectional(LSTM(units=256, dropout=droprate, recurrent_dropout=droprate)))\n",
     "    \n",
-    "    '''\n",
+    "    model.add(Dense(units=64, activation='elu'))\n",
     "    model.add(BatchNormalization())\n",
     "    model.add(Dropout(droprate))\n",
     "\n",
-    "    model.add(Dense(units=256, activation='elu'))\n",
+    "    model.add(Dense(units=16, activation='elu'))\n",
     "    model.add(BatchNormalization())\n",
     "    model.add(Dropout(droprate))\n",
     "\n",
-    "    model.add(Dense(units=32, activation='elu'))\n",
-    "    model.add(BatchNormalization())\n",
-    "    model.add(Dropout(droprate))\n",
-    "    '''\n",
+    "    model.add(Dense(units=5, activation='softmax'))\n",
     "\n",
-    "    model.add(Dense(units=1, activation='sigmoid'))\n",
-    "\n",
-    "    model.compile(loss='mean_squared_error',\n",
+    "    model.compile(loss='categorical_crossentropy',\n",
     "                  optimizer='adam',\n",
     "                  metrics=['accuracy'])\n",
     "    \n",
     "def do_on_epoch_end(epoch, _):\n",
-    "    if(epoch % 2 == 0):\n",
-    "        pred = model.predict(x_val)\n",
-    "        actual = y_val.copy()\n",
-    "        pred = np.round(pred * 4.0).flatten()\n",
-    "        actual = np.round(actual * 4.0).flatten()\n",
-    "        acc = sum(pred == actual)\n",
-    "        print(\"Accuracy obtained after epoch: \" + str(acc) + \" / \" + str(len(actual)))\n",
+    "    print(\"On epoch end called...\")\n",
     "    \n",
     "\n",
     "if TRAIN_MODEL:\n",
@@ -520,8 +527,9 @@
     "              epochs=10,\n",
     "              verbose=0,\n",
     "              validation_data=[x_val, y_val],\n",
-    "              callbacks = [ModelCheckpoint(MODEL_NAME, monitor='val_loss', verbose=1, save_best_only=True, save_weights_only=False, mode='min', period=1),\n",
-    "                          LambdaCallback(on_epoch_end=do_on_epoch_end)]\n",
+    "              callbacks = [ModelCheckpoint(MODEL_NAME, monitor='val_acc', verbose=1, save_best_only=True, save_weights_only=False, mode='max', period=1),\n",
+    "                          #LambdaCallback(on_epoch_end=do_on_epoch_end)\n",
+    "                          ]\n",
     "             )\n",
     "    \n",
     "print('\\nValidation LSTM model...')\n",
